@@ -1,12 +1,12 @@
 --- #YAML:1.0
 name: bignum
-version: 0.16
+version: 0.17
 version_from: lib/bignum.pm
 license: perl
 distribution_type: module
-generated_by: bignum version 0.16
+generated_by: bignum version 0.17
 installdirs: perl
 requires:
-  Math::BigFloat: 1.48
-  Math::BigInt: 1.74
-  Math::BigRat: 0.14
+  Math::BigFloat: 1.5
+  Math::BigInt: 1.75
+  Math::BigRat: 0.15
