@@ -14,19 +14,19 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 
 SHA1 75170ea9cf37a63bcbee8236d4ee29b974484129 BUGS
-SHA1 54b27706c376420f06a71e59a3719c0119ff32f9 CHANGES
+SHA1 e4e0b3e120a2e2f70951357a9e43b817f203d624 CHANGES
 SHA1 79eb2714ac601ef69639106391036c7d341989de INSTALL
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
 SHA1 0f06f5908ee05c7a17c9a2a2f761eff889ce67f9 MANIFEST
-SHA1 95c528c0f02b6e966a3dc9ab9733ae5722aad3c4 META.yml
-SHA1 279378bff606db961ac1b35c324e2cc783969506 Makefile.PL
+SHA1 816501834b435269e63c75d38d134dc54d091ec4 META.yml
+SHA1 62c11a66c681ee5dacd6e4b6cef80caff27f061f Makefile.PL
 SHA1 8c630804551c0bb41a1cd03f0c7e9c926e3f86f3 README
 SHA1 ffea651b3975289e76187e8d16e3497d36f754bb TODO
 SHA1 00be5f214bfdc6ec5da910aec62b1fee00d610c1 lib/Math/BigFloat/Trace.pm
 SHA1 dd6afbb42cbe5488433fa4796844eb6955d39b8b lib/Math/BigInt/Trace.pm
-SHA1 be0c72af19ad55f483d4d3e3d1d80191d5eab406 lib/bigint.pm
-SHA1 f193bf7186a4eb3b4a6e5c6f3e31a8854f20e700 lib/bignum.pm
-SHA1 428617fb08fa4eb6ee4b7cb61843cc5c644e4d65 lib/bigrat.pm
+SHA1 ba7e0facd8bdc121c11fee260c17e0e1d45793ac lib/bigint.pm
+SHA1 90edec4132a36ead1e79c410778052310fac01f3 lib/bignum.pm
+SHA1 b616bb2d55c477d8b9c1e3314b188531a382b92c lib/bigrat.pm
 SHA1 e646e9ef4c73bf8d2cf7cee763c2ea9256fb604b t/bigint.t
 SHA1 0fc42edd1463f8a6ee2364e6b136b022062c19e3 t/bignum.t
 SHA1 ecdbff8ce0099157e59e52f24cb4568db67d3416 t/bigrat.t
@@ -43,11 +43,11 @@ SHA1 7a4b92967deaf879232c4b13ec356ca6dba92982 t/ratopt_a.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.4 (GNU/Linux)
 
-iQEVAwUBQdbcaXcLPEOTuEwVAQEeVAf5AfYmxvz2km7aqda0ZdSD4JCIndH17LWG
-kjPaOZJVY7cIZmTXO+sF/NhtZEF8GIyfCUlrKJjJo2Q/VLxftG6DzXFqLlZs5fuJ
-sxlppiem/K6MWiM5SMtMeLeO7dMoKFUk8vlIvEjGB+iw9Ux2MLYnb8ZHy9jVM5tI
-dNrDPTkgOeofhzeOqxeY5d+EYKkdVOrdc4m7mK+jgAYijWXh9BtKx9H3Zfn12cLm
-ND9NHl7SMRJMaQE4gHKmZbsSSG2AXtQ2f2t8NN0++d3HRXsvtK8R8v2iufJvKuDQ
-gFvt0v+jN4DtGBItEyCx6fMBUPmyX7qv1Qn0m1RP9HaBeWaQ1oYwwg==
-=P50M
+iQEVAwUBQk+ryXcLPEOTuEwVAQHM4Qf+PNRRJuM3t4nGd1TNGCfuhslp8G0SoU3+
+QQRYK4d/mDpBQ6pwE+qGE6g240LjJwhPlAdMvAmtqU8MW3SlRLn0UTIvTpwKkIYl
+jnJZDd7BT0+wqzQ5vRjrnR37Q64qzsB/hMsaxX4W6xwxr0Pyu7l+sn7Crjcfx8/6
+IBaNC+xVsR7C46WA4MjYKWWah5oNl6D2pPmxRi0DuVye6Rg4ECBx+NV/OB80e6Bg
+6R6Rz9CqNqCb58jvBjZhfjTIwS44ZzZOCRYoO3/K/RJhXP0lmGlPM3qkzbIEWFYO
+7bbjfW40OJRG+rXyEoGBqznBnT8frttlECwD1nwefKzEkI/3mHjo+g==
+=9+bT
 -----END PGP SIGNATURE-----
